# julius

./: build.sh  gui.c  gui.h  lv_conf.h  lv_conf.h.in  main.c  media.c  media.h  meson.build  meson_options.txt  network.c  network.h  run.sh  sdp_builder.h  sdp_builder_impl.c  toolchain-rpi.txt  ua.c  ua.h
.cache/clangd/index/: AD_touch.c.D3449B8BE7861F30.idx  AD_touch.h.1E1847F9F9E19900.idx  FT5406EE8.c.27E39FA5DA1A2AF9.idx  FT5406EE8.h.EB0E382C38AEC0D1.idx  GC9A01.c.B29A83C5ADA3DCDD.idx  GC9A01.h.54FE1FEF5D01C0F3.idx  ILI9341.c.8DC52D754995A3E9.idx  ILI9341.h.47A89F7D7DE6B1A0.idx  R61581.c.F3E760488E97492D.idx  R61581.h.6039656ECFF65F2D.idx  SHARP_MIP.c.CEFD10FB7BD9392D.idx  SHARP_MIP.h.889AF072D3E189E4.idx  SSD1963.c.D1A4AC97AE66362B.idx  SSD1963.h.4ADD7FBC24689B17.idx  ST7565.c.623719E3A9AA7DA0.idx  ST7565.h.6EBA62B9FECE7A53.idx  UC1610.c.9A2B3859EB4C6FC3.idx  UC1610.h.ED175A86827C98B2.idx  XPT2046.c.4B1A7D575931DFD6.idx  XPT2046.h.2238430446527F34.idx  code128.c.2BF3A8F93299A857.idx  drm.c.1BBD269CF8106D52.idx  drm.h.53583F1646059459.idx  evdev.c.D15B219D96234E6C.idx  evdev.h.CB03FD3684E81C22.idx  fbdev.c.63C23B59D248FCB2.idx  fbdev.h.70D99A4D1373A547.idx  gifdec.c.1CAA955E1FD49183.idx  gifdec.h.75E02CB14F8B3A34.idx  gtkdrv.c.61EC42BFB84E8030.idx  gtkdrv.h.DAD1AA90AB06B70C.idx  gui.c.9F0FCEB3E206B6FE.idx  gui.h.ADB11E89F544853D.idx  libinput.c.60AF0541EDEF5EBC.idx  libinput_drv.h.1115B1835DE06B6D.idx  lodepng.c.BBE591533906675C.idx  lodepng.h.223F7129DA0C2C9C.idx  lv_anim.c.7FD01C01DFDFEE2C.idx  lv_anim.h.22206074DD148317.idx  lv_anim_private.h.DAE9B5E75A96477A.idx  (+635 more)
sofia-sip-1.13.17/: configure.gnu
sofia-sip-1.13.17/libsofia-sip-ua/stun/: stunc
